<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tài Chính Cá Nhân</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thu_nhap">Thu nhập</string>
    <string name="chi_tieu">Chi tiêu</string>
    <string name="vay_no">Vay nợ</string>
    <string name="cho_vay">Cho vay</string>
    <string name="thong_ke">Xem thống kê</string>
     <string name="ke_hoach">Kế hoạch</string>
     <string name="gioi_thieu">Giới thiệu</string>
     <string name="myfragment_name">MyFragment</string>
     <string name="huy">HỦY</string>
     <string name="thoat">THOÁT</string>
     <string name="luu">LƯU</string>
      <string name="xemthongke">XEM THỐNG KÊ</string>
     <string name="main_menu">Main Menu</string>
     <string name="ngaytra">Ngày trả</string>
     <string name="luachonthoigian">Lựa chọn thời gian :</string>
     <string name="app_name_full">Phần mềm Quản lý Tài chính Cá nhân</string>
     <string name="version">Version 1.0</string>
     <string name="by">bởi Hương Võ</string>
     <string name="lien_he_mail">email: huongvo.94@gmail.com</string>

</resources>
