<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sar.taichinhcanhan.main.MainActivity" >
<LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/topbarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_menu"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
     <LinearLayout
        	android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tổng dư hiện tại: "
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTongDuMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100000"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:layout_above="@+id/main_bottom"
        android:layout_below="@+id/linear_top"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btThu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/thu_nhap"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bound_stage_blue"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/chi_tieu"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bound_stage_blue"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btVayNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/vay_no"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bound_stage_blue"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btChoVay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/cho_vay"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bound_stage_blue"
            android:padding="10dp" />

        <Button
            android:id="@+id/btThongKe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/thong_ke"
            android:textSize="18sp" 
            android:textColor="@android:color/white"
            android:background="@drawable/button_bound_stage_blue"
            android:padding="10dp"/>

<!--         <Button -->
<!--             android:id="@+id/btKeHoach" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_marginBottom="12dp" -->
<!--             android:text="@string/ke_hoach" -->
<!--             android:textSize="18sp"  -->
<!--             android:textColor="@android:color/white" -->
<!--             android:background="@drawable/button_bound_stage_blue" -->
<!--             android:padding="10dp"/> -->
    </LinearLayout>

   

</RelativeLayout>