<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textTitleThongKe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/luachonthoigian"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
	<TextView 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Theo : "
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        
        android:layout_gravity="center"
	    />
        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tongTienThongKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btThoatThongKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bound_stage_red"
            android:padding="7dp"
            android:text="@string/thoat"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btXemThongKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bound_stage_oran"
            android:padding="7dp"
            android:text="@string/xemthongke"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentThongKe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="5dp" >
    </LinearLayout>
<!--     <android.support.v4.view.ViewPager -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="match_parent" -->
<!--             android:id="@+id/viewPage" -->
<!--             android:layout_margin="5dp" -->
            
<!--             /> -->

</LinearLayout>